Container Overflow Fix
- Fixed issue with container overflow generating scrollbar on x axis

--- a/src/styles/UIContainer.css
+++ b/src/styles/UIContainer.css
@@ -35,6 +35,7 @@
     opacity: 0;
     transition: all 0.3s ease-out; 
     touch-action: auto;
+    overflow-x: hidden;
 }
 
 .fade-container { 
